2015-07-22  Gavin Smith  <gavinsmith0123@gmail.com>
	
	* tp/Texinfo/Convert/XSParagraph/mylib: Move all files up a 
	level.
	* tp/Texinfo/Convert/XSParagraph/lib/XSParagraph.pm: Move up a 
	level.
	* tp/t/test_utils.pl: Include builddir for XSParagraph in @INC.

2015-07-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/mylib/xspara.c (xspara_add_text):
	Remove space doubling at end of sentence within a @w.

2015-07-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Writing A Menu): Move node before "Menu 
	Location" node.
	(Menus, Menu Location): Move advice on writing short nodes to 
	Menu Location.
	(Menu Parts, Menu Location): Move advice on how to access menu 
	entries in Info to be next to the advice on how to access menu 
	entries in HTML.
	(Menu Location): Place obsolete advice within an @ignore block.	
	Move exhortation to use a hierarchical structure to Writing A 
	Menu, because that isn't to do with the menu location.
	(Menu Example): Move node to be just after Writing A Menu node.
	(Writing a Menu): Split paragraph about menu entries and menu 
	comments into two.
	(Writing a Menu, Menu Parts): Move advice about extraneous 
	whitespace from Writing a Menu.

2015-07-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Top): Add menu comment to separate 
	Appendices from Chapters.

2015-07-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Add \global\usebracesinindexestrue at start 
	of file.

2015-07-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Updating Nodes and Menus): Don't say that 
	updating node pointers is required, because makeinfo determines 
	them automatically.
	(Updating Requirements): Don't say that makeinfo requires menus.
	(Chapter Structuring): Remove aside about "sectioning 
	structuring".
	(Tree Structuring): Don't mention that node pointers are 
	implicit in example.
	(Raise/Lower Sections): Reword paragraph about a problem that 