@@ -1,6 +1,6 @@
 # $Id$
 # Makefile.am for texinfo/tp/tests.
-# Copyright 2012, 2013, 2014 Free Software Foundation, Inc.
+# Copyright 2012, 2013, 2014, 2015 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -10,7 +10,8 @@
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
-# autogenerated test scripts list and tests-parser.txt list
+# autogenerated list of scripts that only run one test, and lists of 
+# tests-parser.txt files specifying the tests to run.
 include $(srcdir)/Makefile.onetst
 
 $(srcdir)/Makefile.onetst: \
@@ -20,6 +21,7 @@ $(srcdir)/Makefile.onetst: \
 	  -base '$(base_tests)' \
 	  -long '$(long_tests)' \
 	  -tex_html '$(tex_html_tests)'
+
 #htmlxref htmlxref-only_mono htmlxref-only_split
 base_tests = \
  formatting 
